# mstarsupply_backend

./: .flaskenv  README.md  pyproject.toml
entry/: models.py  routes.py  schemas.py
instance/: supply_db
mstarsupply_backend/: app.py  database.py
mstarsupply_backend/entry/: models.py  routes.py  schemas.py
mstarsupply_backend/product/: models.py  routes.py  schemas.py
mstarsupply_backend/report/: utils.py
product/: models.py  routes.py  schemas.py
report/: utils.py
