[tool.poetry]
name = "mstarsupply-backend"
version = "0.1.0"
description = ""
authors = ["jose_sn <zeneto1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.25"
marshmallow = "^3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
