[tool.poetry]
name = "mstarsupply-backend"
version = "0.1.0"
description = ""
authors = ["jose_sn <zeneto1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.25"
marshmallow = "^3.20.2"
sqlalchemy-utils = "^0.41.1"
pytz = "^2023.3.post1"
reportlab = "^4.0.9"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
